--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="magnitude">Magnitude: </string>
-    <string name="date_and_time">Date: </string>
+    <string name="date_and_time">Date and Time: </string>
     <string name="Place">Palce: </string>
+    <string name="depth">Depth: </string>
 </resources>
